--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
             <div class="col-sm-4 pl-4 h5">
                 <h3>Other related content</h3>
                 <hr/>
-                <p><a href="">Download the complete source code</a></p>
+                <p><a href="https://github.com/alanjones2/streamlitfromscratch/raw/main/code/code.zip">
+                    Download the complete source code
+                </a></p>
             </div>
         </div>
 
