--- a/index.html
+++ b/index.html
@@ -91,16 +91,17 @@
             <div class="col-sm-8 h5">
                 <h3>Main Streamlit from Scratch Articles</h3>
                 <hr/>
-                <p><a href="https://medium.com/towards-data-science/streamlit-from-scratch-getting-started-f4baa7dd6493">
+                <p><a href="https://medium.com/towards-data-science/streamlit-from-scratch-getting-started-f4baa7dd6493" target="_blank">
                     1. Streamlit from Scratch: Getting Started
                 </a></p>
-                <p><a href="https://medium.com/towards-data-science/streamlit-from-scratch-embedding-images-video-and-audio-8b2e8b98fad4">
+                <p><a href="https://medium.com/towards-data-science/streamlit-from-scratch-embedding-images-video-and-audio-8b2e8b98fad4" target="_blank">
                     2. Streamlit from Scratch: Embedding Images, Video and Audio
                 </a></p>
-                <p><a href="https://medium.com/towards-data-science/streamlit-from-scratch-presenting-data-d5b0c77f9622">
+                <p><a href="https://medium.com/towards-data-science/streamlit-from-scratch-presenting-data-d5b0c77f9622" target="_blank">
                     3. Streamlit from Scratch: Presenting Data
                 </a></p>
-                <p><a href="">4. Streamlit from Scratch: Build a Data Dashboard with Streamlit's Layout and UI features</a></p>
+                <p><a href="https://towardsdatascience.com/streamlit-from-scratch-build-a-data-dashboard-with-streamlits-layout-and-ui-features-a2fc2f0a6a59" target="_blank">
+                    4. Streamlit from Scratch: Build a Data Dashboard with Streamlit's Layout and UI features</a></p>
             </div>
             <div class="col-sm-4 pl-4 h5">
                 <h3>Other related content</h3>
