--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:image"
-        content="https://github.com/alanjones2/alanjones2.github.io/raw/main/images/plottingwithpandas.png">
+        content="https://github.com/alanjones2/streamlitfromscratch/raw/main/images/col_tab_app.png">
     <meta name="twitter:image:src"
-        content="https://github.com/alanjones2/alanjones2.github.io/raw/main/images/plottingwithpandas.png">
+        content="https://github.com/alanjones2/streamlitfromscratch/raw/main/images/col_tab_app.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="article:author" content="https://alanjones2.github.io">
     <meta name="twitter:creator" content="@MrAlanJones">
     <meta name="author" content="Alan Jones">
 
 
-    <meta content="Coding, data science data visualization in Python and Julia - Articles and Tutorials"
+    <meta content="Streamlit resources and tutorials"
         name="description">
     <meta content="https://alanjones2.github.io" property="og:url">
-    <meta content="AlanJones: Coding, data science data visualization in Python and Julia - Articles and Tutorials"
+    <meta content="Streamlit from Scratch: building data science data visualization apps in Python"
         property="og:title">
 
 
