--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <meta content="Streamlit resources and tutorials"
         name="description">
-    <meta content="https://alanjones2.github.io" property="og:url">
+    <meta content="https://alanjones2.github.io/streamlitfromscratch" property="og:url">
     <meta content="Streamlit from Scratch: building data science data visualization apps in Python"
         property="og:title">
 
