--- a/index.html
+++ b/index.html
@@ -105,13 +105,10 @@
     </div>
 
 
-    <div id="amzn-assoc-ad-d5bf4dcd-55c6-4038-a3d8-ff8bfa49de8a"></div>
-    <script async
-        src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=d5bf4dcd-55c6-4038-a3d8-ff8bfa49de8a"></script>
     <div style="margin: 20px;">
-        <footer class="text-right text-secondary">
-            <i>Please note that the author is not affiliated with Streamlit in any way. aAl the software referred to
-                here
+        <footer class="text-right text-secondary p-4">
+            <i>Please note that the author is not affiliated with Streamlit in any way.<br/> 
+                All the software referred to here
                 is written for educational purposes and should not be considered suitable for production code</i>
             <br />
             <i>&copy; 2022, Alan Jones</i> &nbsp;
