--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
         </p>
 
     </div>
-    <div class="container">
-        <div class="row">
+<div class="container-fluid ml-4 mr-4">
+        <div class="row m-4">
             <div class="col-sm-12 mb-4 lead">
                 Streamlit is a framework for creating Data Science apps in Python.
-                The articles and hints on this site will help get started and eventually build into a significant
+                The articles and hints on this site will help get you started and eventually will hopefully build into a significant
                 resource.
             </div>
         </div>
-        <div class="row">
+        <div class="row m-4">
             <div class="col-sm-8 h5">
-                <h4>Main Streamlit from Scratch Articles</h4>
+                <h4>Streamlit from Scratch Articles</h4>
                 <hr />
                 <div class="row">
                     <div class="col-sm-2">
@@ -158,7 +158,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4 pl-4 h5">
+            <div class="col-sm-4  h5">
                 <h4>Other related content</h4>
                 <hr />
                 <p><a
