--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="col-sm-12 mb-4 lead">
                 Streamlit is a framework for creating Data Science apps in Python.
                 The articles and hints on this site will help get you started and eventually will hopefully build into a significant
-                resource.
+                resource. (The articles are hosted on Medium but the links below are 'Friend Links' that bypass the Medium paywall.)
             </div>
         </div>
         <div class="row m-4">
@@ -85,7 +85,7 @@
                         <img width="100%" src="images/hamlet2textscreenshot.png" />
                     </div>
                     <div class="col-sm-8">
-                        <p><a href="https://medium.com/towards-data-science/streamlit-from-scratch-getting-started-f4baa7dd6493"
+                        <p><a href="https://towardsdatascience.com/streamlit-from-scratch-getting-started-f4baa7dd6493?sk=2c009fc4106a896467bda51901e31086"
                                 target="_blank">
                                 1. Streamlit from Scratch: Getting Started
                             </a></p>
@@ -102,7 +102,7 @@
                         <img width="100%" src="images/eagleapp.png" />
                     </div>
                     <div class="col-sm-8">
-                        <p><a href="https://medium.com/towards-data-science/streamlit-from-scratch-embedding-images-video-and-audio-8b2e8b98fad4"
+                        <p><a href="https://towardsdatascience.com/streamlit-from-scratch-embedding-images-video-and-audio-8b2e8b98fad4?sk=df84eef479683e1b50ab2666c624f5d8"
                                 target="_blank">
                                 2. Streamlit from Scratch: Embedding Images, Video and Audio
                             </a></p>
@@ -119,7 +119,7 @@
                         <img width="100%" src="images/group-of-charts.png" />
                     </div>
                     <div class="col-sm-8">
-                        <p><a href="https://medium.com/towards-data-science/streamlit-from-scratch-presenting-data-d5b0c77f9622"
+                        <p><a href="https://towardsdatascience.com/streamlit-from-scratch-presenting-data-d5b0c77f9622?sk=ab53df2ace41e7f337f79a790f9fd399"
                                 target="_blank">
                                 3. Streamlit from Scratch: Presenting Data
                             </a></p>
@@ -135,7 +135,7 @@
                         <img width="100%" src="images/column_app.png" />
                     </div>
                     <div class="col-sm-8">
-                        <p><a href="https://towardsdatascience.com/streamlit-from-scratch-build-a-data-dashboard-with-streamlits-layout-and-ui-features-a2fc2f0a6a59"
+                        <p><a href="https://towardsdatascience.com/streamlit-from-scratch-build-a-data-dashboard-with-streamlits-layout-and-ui-features-a2fc2f0a6a59?sk=70e6b7b65cc87093fb7fd5727ced6c0b"
                                 target="_blank">
                                 4. Streamlit from Scratch: Build a Data Dashboard with Streamlit's Layout and
                                 UI features</a>
@@ -162,13 +162,13 @@
                 <h4>Other related content</h4>
                 <hr />
                 <p><a
-                        href="https://medium.com/towards-data-science/publish-your-streamlit-apps-in-the-cloud-3ac5a5fe3d51">
+                        href="https://towardsdatascience.com/publish-your-streamlit-apps-in-the-cloud-3ac5a5fe3d51?sk=83e2deb4d2cf42d2399de06ae83adc7c">
                         Publish Your Streamlit Apps in the Cloud
                     </a></p>
                     <p class="font-weight-light">
                         Share your Streamlit apps with these free tools: Streamlit Cloud, Github and VSCode                    </p>
                     <p><a
-                        href="https://medium.com/towards-data-science/3-ways-to-create-a-multi-page-streamlit-app-1825b5b07c0f">
+                        href="https://towardsdatascience.com/3-ways-to-create-a-multi-page-streamlit-app-1825b5b07c0f?sk=89d1e06d84cdc1005dfa014665a55c3c">
                         4 Ways to Create a Multi-Page Streamlit App
                     </a></p>
                     <p class="font-weight-light">
