--- a/indexold.html
+++ b/indexold.html
@@ -81,14 +81,13 @@
                 <h4>Streamlit from Scratch Articles</h4>
                 <hr />
                 <div class="row">
-                    <div class="col-sm-1">
-                        <!--<img width="100%" src="images/hamlet2textscreenshot.png" />-->
-                        <div class="display-1 text-center">1</div>
+                    <div class="col-sm-2">
+                        <img width="100%" src="images/hamlet2textscreenshot.png" />
                     </div>
-                    <div class="col-sm-10">
+                    <div class="col-sm-8">
                         <p><a href="https://towardsdatascience.com/streamlit-from-scratch-getting-started-f4baa7dd6493?sk=2c009fc4106a896467bda51901e31086"
                                 target="_blank">
-                                Streamlit from Scratch: Getting Started
+                                1. Streamlit from Scratch: Getting Started
                             </a></p>
                         <p class="font-weight-light">
                             Finding the tools you need and how to use them to create your first interactive web app in
@@ -99,15 +98,13 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-1">
-                        <!--<img width="100%" src="images/eagleapp.png" />-->
-                        <div class="display-1 text-center">2</div>
-        
+                    <div class="col-sm-2">
+                        <img width="100%" src="images/eagleapp.png" />
                     </div>
-                    <div class="col-sm-10">
+                    <div class="col-sm-8">
                         <p><a href="https://towardsdatascience.com/streamlit-from-scratch-embedding-images-video-and-audio-8b2e8b98fad4?sk=df84eef479683e1b50ab2666c624f5d8"
                                 target="_blank">
-                                Streamlit from Scratch: Embedding Images, Video and Audio
+                                2. Streamlit from Scratch: Embedding Images, Video and Audio
                             </a></p>
                         <p class="font-weight-light">
                             Streamlit was designed to help data scientists but it’s not just about data, adding media
@@ -118,14 +115,13 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-1">
-                        <div class="display-1 text-center">3</div>
-
+                    <div class="col-sm-2">
+                        <img width="100%" src="images/group-of-charts.png" />
                     </div>
-                    <div class="col-sm-10">
+                    <div class="col-sm-8">
                         <p><a href="https://towardsdatascience.com/streamlit-from-scratch-presenting-data-d5b0c77f9622?sk=ab53df2ace41e7f337f79a790f9fd399"
                                 target="_blank">
-                                Streamlit from Scratch: Presenting Data
+                                3. Streamlit from Scratch: Presenting Data
                             </a></p>
                         <p class="font-weight-light">
                             From text and tables to sophisticated charts. From Pandas dataframes to Matplotlib, Plotly,
@@ -135,13 +131,13 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-1">
-                        <div class="display-1 text-center">4</div>
+                    <div class="col-sm-2">
+                        <img width="100%" src="images/column_app.png" />
                     </div>
-                    <div class="col-sm-10">
+                    <div class="col-sm-8">
                         <p><a href="https://towardsdatascience.com/streamlit-from-scratch-build-a-data-dashboard-with-streamlits-layout-and-ui-features-a2fc2f0a6a59?sk=70e6b7b65cc87093fb7fd5727ced6c0b"
                                 target="_blank">
-                                Streamlit from Scratch: Build a Data Dashboard with Streamlit's Layout and
+                                4. Streamlit from Scratch: Build a Data Dashboard with Streamlit's Layout and
                                 UI features</a>
                         <p class="font-weight-light">Streamlit has simple but effective components for user interaction
                             and layout
@@ -151,29 +147,29 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-1">
+                    <div class="col-sm-2">
                         <img width="100%" src="" />
                     </div>
-                    <div class="col-sm-10">
+                    <div class="col-sm-8">
 
+                        <p><a href="https://github.com/alanjones2/streamlitfromscratch/raw/main/code/code.zip">
+                                Download the complete <i>Streamlit from Scratch</i> source code
+                            </a></p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-4  h5">
                 <h4>Other related content</h4>
                 <hr />
-                <p><a href="https://github.com/alanjones2/streamlitfromscratch/raw/main/code/code.zip">
-                    <li>Download the complete <i>Streamlit from Scratch</i> source code</li>
-                </a></p>
                 <p><a
                         href="https://towardsdatascience.com/publish-your-streamlit-apps-in-the-cloud-3ac5a5fe3d51?sk=83e2deb4d2cf42d2399de06ae83adc7c">
-                        <li>Publish Your Streamlit Apps in the Cloud</li>
+                        Publish Your Streamlit Apps in the Cloud
                     </a></p>
                     <p class="font-weight-light">
                         Share your Streamlit apps with these free tools: Streamlit Cloud, Github and VSCode                    </p>
                     <p><a
                         href="https://towardsdatascience.com/3-ways-to-create-a-multi-page-streamlit-app-1825b5b07c0f?sk=89d1e06d84cdc1005dfa014665a55c3c">
-                        <li>4 Ways to Create a Multi-Page Streamlit App</li>
+                        4 Ways to Create a Multi-Page Streamlit App
                     </a></p>
                     <p class="font-weight-light">
                         Streamlit may not have been designed for 
