add thme article ref

--- a/index.html
+++ b/index.html
@@ -179,14 +179,22 @@
                         Streamlit may not have been designed for 
                         full-blown websites, but it is fairly straightforward to create multiple pages in a single app                    </p>
 
+                    <p><a href="https://medium.com/technofile/streamlit-has-a-new-theme-for-plotly-d4a7109a7f55?sk=99a4d5ca2f7cfd0b0312589d9392e581">
+                        <li>Streamlit has a new Theme for Plotly</li>
+                        <p class="font-weight-light">
+                        Streamlit has a set of colours that is consistent throughout the app but Plotly did not conform — with Streamlit 1.16, this has changed.
+                        </p>    
+                    </a></p>
                     <p><a href="">
                         <p class="font-weight-light">
+
                         </p>    
                     </a></p>
             </div>
         </div>
 
     </div>
+
 
 
     <div style="margin: 20px;">
