--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
                         Streamlit has a set of colours that is consistent throughout the app but Plotly did not conform — with Streamlit 1.16, this has changed.
                         </p>    
                     </a></p>
-                    <p><a href="">
+                    <p><a href="https://github.com/alanjones2/streamlitfromscratch/raw/main/code/plotlytheme.py">
                         <p class="font-weight-light">
-
+                        Download the code for the article above
                         </p>    
                     </a></p>
             </div>
