--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <script>fetch("https://alanjones.pythonanywhere.com/lg?url=alanjones2.github.io/streamlitfromscratch")
             .then(data => console.log(data));
     </script>
-    <div class="jumbotron">
-        <h1 class="display-4" style="font-weight:bolder">Streamlit<span style="font-weight:lighter"> from Scratch</span>
+    <div class="jumbotron" style="padding:2rem">
+        <h1 class="display-6" style="font-weight:bolder">Streamlit<span style="font-weight:lighter"> from Scratch</span>
             <span class="text-secondary" style="font-size:50%;font-weight: lighter;"> building data science apps with
                 Python</span>
         </h1>
@@ -70,10 +70,10 @@
     </div>
 <div class="container-fluid ml-4 mr-4">
         <div class="row m-4">
-            <div class="col-sm-12 mb-4 lead">
+            <div class="col-sm-8 mb-4 lead">
                 Streamlit is a framework for creating Data Science apps in Python.
-                The articles and hints on this site will help get you started and eventually will hopefully build into a significant
-                resource. (The articles are hosted on Medium but the links below are 'Friend Links' that bypass the Medium paywall.)
+                The articles and hints on this site will help get you started and will build into a significant
+                resource. (<i>Links to articles that are hosted on Medium are free to read 'Friend Links' that bypass the Medium paywall.</i> )
             </div>
         </div>
         <div class="row m-4">
