--- a/index.html
+++ b/index.html
@@ -188,6 +188,16 @@
                     <p><a href="https://github.com/alanjones2/streamlitfromscratch/raw/main/code/plotlytheme.py">
                         Download the code for the article above  
                     </a></p>
+                    <p><a href="./mdcolour/mdcolour.html">
+                        <li>Streamlit Markdown Text Just Got Colourful</li>
+                    </a></p>
+                    <p class="font-weight-light">
+                        Streamlit has a set of colours that is consistent throughout the app but Plotly did not conform — with Streamlit 1.16, this has changed.
+                    </p>    
+                    <p><a href="./mdcolour/mdcolour.py">
+                        Download the code for the article above  
+                    </a></p>
+
             </div>
         </div>
 
