--- a/mdcolour/mdcolour.html
+++ b/mdcolour/mdcolour.html
@@ -3,7 +3,7 @@
 <head>
 
     <link rel="stylesheet" href="./prism/prism.css">
-    <script src="./prism/prism.js"></script>
+    <script src="../prism/prism.js"></script>
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/main.css">
