--- a/sfs-index.html
+++ b/sfs-index.html
@@ -15,14 +15,17 @@
 
 <body  class = "p5 text-dark">
 
-    <div class="jumbotron">
-        <h1 class="display-3">Streamlit from Scratch</h1>
-        <h3 class="pl-2">
-        Streamlit is a framework for creating Data Science apps in Python. 
-        Streamlit from Scratch is an evolving onlne resource that will teach you how to get started with Streamlit 
+    <div class="jumbotron" style="padding:2rem">
+        <h1 class="display-6" style="font-weight:bolder">Streamlit<span style="font-weight:lighter"> from Scratch</span>
+            <span class="text-secondary" style="font-size:50%;font-weight: lighter;"> building data science apps with
+                Python</span>
+        </h1>
+        <hr />
+        <span class = "text-secondary mr-4">
+        Streamlit is a framework for creating Data Science apps in Python.<br/> 
+        <b>Streamlit from Scratch</b> is an evolving onlne resource that will teach you how to get started with Streamlit<br/> 
         from building fully functional data dashboard apps using Streamlit's layout and data presentation features.
-
-        <span class = "text-secondary"></span></h3>
+        </span>
     </div>
 
     <div class="row">
