--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <hr />
         <span class = "text-secondary mr-4">
         Streamlit is a framework for creating Data Science apps in Python.<br/> 
-        <b>Streamlit from Scratch</b> is an evolving onlne resource that will teach you how to get started with Streamlit<br/> 
-        from building fully functional data dashboard apps using Streamlit's layout and data presentation features.
+        <b>Streamlit from Scratch</b> is an evolving online resource that will teach you how to get started with Streamlit<br/> 
+        from you first simple text-based web app, then adding media, presenting data, and finally building fully functional data dashboard apps<br/>
+        using Streamlit's layout and data presentation features.
         </span>
     </div>
 
