--- a/index.html
+++ b/index.html
@@ -91,7 +91,20 @@
                 <a class="nav-link active" onclick="nextPage()" href="#">Next ></a>
             </ul>
         </div>
-        <div class="col-sm-3 p-4 ml-4 mr-4 mb-4 bg-white">           
+        <div class="col-sm-3 p-4 ml-4 mr-4 mb-4 bg-white">
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
+            crossorigin="anonymous"></script>
+        <!-- sfs vertical -->
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-3208991186670959"
+            data-ad-slot="6617299104"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>           
         </div>
     </div>
     <script>
