--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
         </div>
         <div class="col-sm-3 p-4 ml-4 mr-4 mb-4 bg-white">
 
+        <div class="lead">
+            Subscribe to the free <a href = "https://streamlitfromscratch.substack.com/" target="_blank">Streamlit from Scratch newsletter</a> to receive updates, new articles, and news about Streamlit 
+        </div>
+        <hr/>
+
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
             crossorigin="anonymous"></script>
         <!-- sfs vertical -->
