ad amazon recommend

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             Subscribe to the free <a href = "https://streamlitfromscratch.substack.com/" target="_blank">Streamlit from Scratch newsletter</a> to receive updates, new articles, and news about Streamlit 
         </div>
         <hr/>
+        
 
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
             crossorigin="anonymous"></script>
@@ -159,6 +160,8 @@
 
         
     </script>
+
+    <div id="amzn-assoc-ad-69c31123-ddf7-4858-8ad7-4bf99d585e24"></div><script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=69c31123-ddf7-4858-8ad7-4bf99d585e24"></script>
 
     <footer class="text-right text-secondary p-4 m-4">
 
