add resources and about page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
         from you first simple text-based web app, then adding media, presenting data, and finally building fully functional data dashboard apps<br/>
         using Streamlit's layout and data presentation features.
         </span>
+
+
     </div>
+
+    <ul class="navbar navbar-expand-lg navbar-light lead  mr-4">
+        <a class="nav-link active ml-auto" href="index.html">Home</a>
+        <a class="nav-link active" href="sfs-resources.html">Resources</a>
+        <a class="nav-link active" href="sfs-about.html">About</a>
+    </ul>
+
 
     <div class="row">
         <div class="col-sm-2 p-2 ml-4 mr-4 mb-4 bg-white border-left">
@@ -88,7 +97,7 @@
         </div>
         <div class="col-sm-6 p-4 ml-4 mr-4 mb-4 bg-white">           
             <div id="content" data-prismjs-copy-timeout="500" data-prismjs-copy="Copy code"></div>
-            <ul class="navbar navbar-expand-sm" style="background-color: lightgray;padding-left: 0%;font-weight:bold;font-size:120%">
+            <ul class="navbar navbar-expand-lg navbar-light bg-light lead  mr-4">
                 <a class="nav-link active" onclick="previousPage()" href="#">< Previous</a>
                 <a class="nav-link active" onclick="firstPage()" href="#">Back to start</a>
                 <a class="nav-link active" onclick="nextPage()" href="#">Next ></a>
