--- a/sfs-about.html
+++ b/sfs-about.html
@@ -51,11 +51,21 @@
             use its features to build fully functional data dashboard apps.
             Get started by clicking on the <i>Home</i> link.
 
+            <h5>Privacy</h5>
+            <div>
+                <i>Streamlit from Scratch</i> may utilise Google Analytics, or similar, to record your visit but it does
+                not retain any information about
+                you or your activity on this site.<br />
+                Third party links for advertising or affliate links may also be used on this site.<br />
+                <i>Streamlit from Scratch</i> does not use cookies.
+            </div>
             <h5>Stay up-to-date</h5>
-            You won't have to worry about missing anything. By subscribing to the
-            <a href="https://streamlitfromscratch.substack.com/" target="_blank">Streamlit
-                from Scratch newsletter</a> newsletter updates to the site, new tutorials, and news about Streamlit
-            will appear directly in your inbox.
+            <div>
+                You won't have to worry about missing anything. By subscribing to the
+                <a href="https://streamlitfromscratch.substack.com/" target="_blank">Streamlit
+                    from Scratch newsletter</a> newsletter updates to the site, new tutorials, and news about Streamlit
+                will appear directly in your inbox.
+            </div>
         </div>
         <div class="col-sm-3 p-4 ml-4 mr-4 mb-4 bg-white">
             <div class="lead">
